have the body of issues being shortened if too long now

--- a/github-issue-getter/src/components/resultsPage/styles/ResultsContainer.scss
+++ b/github-issue-getter/src/components/resultsPage/styles/ResultsContainer.scss
@@ -14,10 +14,11 @@
 
 .issuesContainer {
   height: 80%;
-
+  margin-left: 3%;
+  margin-right: 3%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  grid-auto-rows: 150px;
+  grid-auto-rows: 180px;
   grid-row-gap: 20px;
   grid-column-gap: 20px;
 }
@@ -31,4 +32,18 @@
   margin-bottom: 2%;
   font-size: 12px;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 1200px) {
+  .issueFilterContainer {
+    width: 60%;
+    margin-bottom: 5%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .issueFilterContainer {
+    width: 90%;
+    margin-bottom: 5%;
+  }
 }
